--- a/src/app/address-search/address-result/address-result.component.html
+++ b/src/app/address-search/address-result/address-result.component.html
@@ -1,1 +1,35 @@
-<p>listagem works!</p>
+<section class="address-result">
+  @if (dataSource.length > 0) {
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 responsive-table">
+      <ng-container matColumnDef="cep">
+        <th mat-header-cell *matHeaderCellDef> CEP </th>
+        <td mat-cell *matCellDef="let element" data-label="CEP"> {{ element.cep }} </td>
+      </ng-container>
+      <ng-container matColumnDef="endereco">
+        <th mat-header-cell *matHeaderCellDef> Endereço </th>
+        <td mat-cell *matCellDef="let element" data-label="Endereço">
+          {{ element.logradouro }}
+          {{ element.complemento ? ', ' + element.complemento : '' }}
+          {{ element.bairro ? ', ' + element.bairro : '' }}
+          <br />
+          {{ element.localidade }} - {{ element.uf }}
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef> Data </th>
+        <td mat-cell *matCellDef="let element" data-label="Data"> {{ element.timestamp }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Ações </th>
+        <td mat-cell *matCellDef="let element" data-label="Ações">
+          <button mat-button color="warn">Excluir</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  }
+</section>
