--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<main class="home-container">
+  <section class="welcome-section">
+    <h1>Bem-vindo(a) ao teste de front-end</h1>
+    <p class="subtitle">Teste realizado por Rafael Silva em 31/07/2025</p>
+  </section>
+</main>
