--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -25,7 +25,8 @@
   width: 30%; 
   gap: 8px;
   padding-right: 16px; 
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  background-color: #670000;
 }
 
 .menu-item {
