feat: add logo to header component

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
 <header role="banner" class="header">
-  <div class="logo">SCCON</div>
+  <div class="logo">
+    <img src="assets/logo.svg" alt="SCCON Logo" />
+  </div>
   <div class="spacer"></div>
 
   <nav role="navigation" aria-label="Menu principal" class="menu-desktop">
