--- a/src/app/address-search/address-result/address-result.component.html
+++ b/src/app/address-search/address-result/address-result.component.html
@@ -23,8 +23,8 @@
 
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
-        <td mat-cell *matCellDef="let element" data-label="Ações">
-          <button mat-button color="warn">Excluir</button>
+        <td mat-cell *matCellDef="let element; let i = index" data-label="Ações">
+          <button mat-button color="warn" (click)="remover(i)">Excluir</button>
         </td>
       </ng-container>
 
