--- a/src/app/address-search/address-result/address-result.component.html
+++ b/src/app/address-search/address-result/address-result.component.html
@@ -1,5 +1,5 @@
 <section class="address-result">
-  @if (dataSource.length > 0) {
+ @if (dataSource.data.length > 0) {
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 responsive-table">
       <ng-container matColumnDef="cep">
         <th mat-header-cell *matHeaderCellDef> CEP </th>
@@ -21,15 +21,19 @@
         <td mat-cell *matCellDef="let element" data-label="Data"> {{ element.timestamp }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Ações </th>
-        <td mat-cell *matCellDef="let element; let i = index" data-label="Ações">
-          <button mat-button color="warn" (click)="remover(i)">Excluir</button>
+     <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="text-right">Ações</th>
+        <td mat-cell *matCellDef="let element; let i = index" class="text-right" data-label="Ações">
+          <button mat-icon-button color="warn" (click)="remover(i)" aria-label="Excluir">
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
       </ng-container>
+
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   }
+   <mat-paginator [pageSize]="8" [pageSizeOptions]="[8]" showFirstLastButtons></mat-paginator>
 </section>
