styling: define and use Sass variables for colors and theme consistency

--- a/src/app/address-search/address-result/address-result.component.scss
+++ b/src/app/address-search/address-result/address-result.component.scss
@@ -23,6 +23,6 @@ address-result {
   overflow-x: auto;
 
   .mat-table {
-    overflow: visible; // ou remova completamente essa regra
+    overflow: visible;
   }
 }
